# provenant

./: .gitignore  EVALUATION.md  README.md  pyproject.toml
benchmarks/: README.md  sample_results.json  swebench_verified_summary.csv
provenant/: telemetry.py
provenant/cli/: __init__.py  augment_hook.py  cost_estimator.py  editor_setup.py  helpers.py  hooks.py  main.py  mcp_config.py  ui.py
provenant/cli/commands/: augment_cmd.py  claude_md_cmd.py  costs_cmd.py  dead_code_cmd.py  decision_cmd.py  delete_cmd.py  doctor_cmd.py  export_cmd.py  hook_cmd.py  improve_cmd.py  init_cmd.py  mcp_cmd.py  reindex_cmd.py  search_cmd.py  serve_cmd.py  status_cmd.py  update_cmd.py  watch_cmd.py  workspace_cmd.py
provenant/cli/editor_integrations/: __init__.py  claude.py  claude_config.py  cline.py  copilot.py  cursor.py  defaults.py  windsurf.py
provenant/core/: rate_limiter.py  reasoning.py  repo_config.py
provenant/core/analysis/: __init__.py  communities.py  decision_extractor.py  execution_flows.py  pr_blast.py  security_scan.py
provenant/core/compression/: attribute.py  evaluate.py  models.py  prune.py
provenant/core/generation/: __init__.py  context_assembler.py  cost_tracker.py  job_system.py  models.py  page_generator.py  report.py
provenant/core/ingestion/: __init__.py  aspnet_extensions.py  change_detector.py  framework_edges.py  git_commit_index.py  git_indexer.py  graph.py  graph_warmups.py  models.py  parser.py  special_handlers.py  traverser.py  tsconfig_resolver.py  type_ref_resolution.py
provenant/core/persistence/: __init__.py  crud.py  database.py  models.py  search.py  vector_store.py
provenant/core/pipeline/: __init__.py  orchestrator.py  persist.py  phase_timing.py  progress.py
provenant/core/workspace/: __init__.py  config.py  contracts.py  cross_repo.py  registry.py  scanner.py  update.py
provenant/llm/providers/: __init__.py
provenant/server/: app.py
provenant/server/mcp_server/: __init__.py  _enrichment.py  _graph_utils.py  _helpers.py  _meta.py  _server.py  _state.py  tool_annotate.py  tool_answer.py  tool_callers.py  tool_community.py  tool_context.py  tool_why.py  (+10 more)
scripts/: benchmark.py  eval_confidence.py  judge.py  judge_compress.py  selfheal_quality.py  swebench_localization.py
scripts/questions/: django.jsonl  flask.jsonl  flask_navigation.jsonl  flask_smoke.jsonl
tests/: test_compression.py  test_hyde_prefetch.py  test_serve_ports.py
(+196 files in other folders)
