[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "provenant"
version = "0.1.2"
description = "Proof-aware codebase intelligence - smarter context, fewer tokens"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = ["codebase", "ai", "mcp", "context", "compression", "llm"]
authors = [
    { name = "Shreyash Sharma", email = "shreyash.sharma78@gmail.com" }
]
dependencies = [
    "httpx>=0.27,<1",
    "tree-sitter>=0.23,<1",
    "tree-sitter-python>=0.23,<1",
    "tree-sitter-typescript>=0.23,<1",
    "tree-sitter-javascript>=0.23,<1",
    "tree-sitter-go>=0.23,<1",
    "tree-sitter-rust>=0.23,<1",
    "tree-sitter-java>=0.23,<1",
    "tree-sitter-cpp>=0.23,<1",
    "networkx>=3.3,<4",
    "scipy>=1.11,<2",
    "jinja2>=3.1,<4",
    "pathspec>=0.12,<1",
    "structlog>=24,<25",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "alembic>=1.13,<2",
    "pydantic>=2.8,<3",
    "tenacity>=9,<10",
    "gitpython>=3.1,<4",
    "pyyaml>=6.0,<7",
    "lancedb>=0.12,<1",
    "rank-bm25>=0.2,<1",
    "sentence-transformers>=3.0,<4",
    "click>=8.1,<9",
    "rich>=13,<14",
    "watchdog>=4,<5",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "mcp>=1.0,<2",
    "fastmcp>=0.1,<1",
    "apscheduler>=3.10,<4",
    "cryptography>=43,<47",
    "anthropic>=0.40,<1",
    "openai>=1.50,<3",
    "google-genai>=1.0,<2",
    "litellm>=1.83.0,<2",
    "python-dotenv>=1.0,<2",
]

[project.urls]
Homepage = "https://github.com/shreyash-sharma/provenant"
Repository = "https://github.com/shreyash-sharma/provenant"
"Bug Tracker" = "https://github.com/shreyash-sharma/provenant/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
]

[project.scripts]
provenant = "provenant.cli.main:cli"
provenant-augment = "provenant.cli.augment_hook:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["provenant*"]

[tool.setuptools.package-data]
provenant = ["server/static/**/*", "server/static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
